# django-fakemessages

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  lint.yml  release.yml  test.yml  upgrade_precommit.yml  upgrade_prek.yml
fakemessages/: apps.py
fakemessages/management/commands/: fakemessages.py
sample_project/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/locales/en/LC_MESSAGES/: django.po
sample_project/locales/kl/LC_MESSAGES/: django.po
sample_project/users/: models.py
tests/: settings.py  test_command.py
