[project]
name = "django-fakemessages"
version = "0.0.1"
description = "Generate fake language files"
license = "MIT"
authors = [
    { name = "Pascal Fouque", email = "fouquepascal@gmail.com" },
]
maintainers = [
    { name = "Pascal Fouque", email = "fouquepascal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=4.2",
    "translate-toolkit>=3.8.5",
]

[project.urls]
Homepage = "https://github.com/pfouque/django-fakemessages"
Repository = "https://github.com/pfouque/django-fakemessages"
Documentation = "https://github.com/pfouque/django-fakemessages"

[dependency-groups]
dev = [
    "coverage",
    "django-stubs[compatible-mypy]",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-randomly",
    "ruff",
    "tox",
]

[tool.uv]
default-groups = [
    "dev"
]

[tool.hatch.build.targets.sdist]
include = ["fakemessages", "fakemessages/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["fakemessages", "fakemessages/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812",  # This rule may cause conflicts when used with the formatter
    "D",  # pydocstyle
    "DOC",  # pydoclint
    "B",
    "PTH",
    "ANN",  # Missing type annotation
    "S101",  # Use of `assert` detected
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "TRY002",  # Create your own exception
    "TRY003",  # Avoid specifying long messages outside the exception class
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "SLF001",  # Private member accessed
    "SIM103",  # Return the condition directly
    "PLC0415",  # `import` should be at the top-level of a file
    "PLR0913",  # Too many arguments in function definition
]
fixable = [
    "I",  # isort
    "RUF100",  # Unused `noqa` directive
    "E501",
]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sample_project.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.django-stubs]
django_settings_module = "sample_project.settings"
